--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -77,5 +77,18 @@ $panel_width: 300px;
             color: rgb(85, 85, 85);
         }
     }
+    padding-bottom: 40px;
     width: calc(100% - #{$panel_width} - 20px);
+}
+@media screen and (max-width: 1100px) {
+    #dashboard_panel{
+        float: none;
+        width: 100%;
+        display: block;
+        margin-bottom: 20px;
+    }
+    #dashboard_content{
+        display: block;
+        width: 100%;
+    }
 }
