edit user_profile by admin section finished

--- a/app/views/dashboard/edit_profile.html.erb
+++ b/app/views/dashboard/edit_profile.html.erb
@@ -18,7 +18,7 @@
                 </div>
             </div>
 
-            <div class="input" style="margin-right: 5px;">
+            <div class="input" style="margin-right: 5px;" dir="rtl">
                 <%= f.label :bio, 'بیگرافی' %>
                 <%= f.text_area :bio %>
             </div>
