working on admins_list in manage_users section

--- a/app/views/dashboard/user_profile.html.erb
+++ b/app/views/dashboard/user_profile.html.erb
@@ -26,7 +26,7 @@
 
                 <div class="input" style="margin-right: 5px;">
                     <%= f.label :website, 'آدرس وبسایت' %>
-                    <%= f.text_field :website, :readonly => true %>
+                    <%= f.text_field :website %>
                 </div>
 
                 <div class="input" style="margin-right: 5px;" dir="rtl">
