--- a/app/views/dashboard/manage_users.html.erb
+++ b/app/views/dashboard/manage_users.html.erb
@@ -1,6 +1,27 @@
 <div class="content_box">
-    <h4 class="header">آخرین ثبت نامی ها (20)</h4>
+    <h4 class="header">لیست ادمین ها</h4>
+    <table class="table">
+        <!-- headers -->
+        <tr>
+            <th>نام و نام خانوادگی</th>
+            <th>نام کاربری</th>
+            <th>-</th>
+        </tr>
+        <!-- rows -->
+        <% @admins_list.each do |admin| %>
+            <% if user.id != session[:user]['id'] %>
+                <tr>
+                    <td><%= admin.full_name %></td>
+                    <td><%= admin.username %></td>
+                    <td>
+                        <%= link_to 'مشاهده', dashboard_user_profile_url(:id => user.id),:class => 'link' %>
+                    </td>
+                </tr>
+            <% end %>
+        <% end %>
+    </table>
 
+    <h4 class="header">آخرین ثبت نامی ها (20)</h4>
     <table class="table">
         <!-- headers -->
         <tr>
