--- a/app/views/dashboard/user_profile.html.erb
+++ b/app/views/dashboard/user_profile.html.erb
@@ -41,7 +41,7 @@
 
                 <div class="checkbox" style="margin-right: 5px;">
                     <%= f.label :is_admin, 'ادمین' %>
-                    <%= f.check_box :is_admin, {}, true, false %>
+                    <%= f.check_box :is_admin %>
                 </div>
 
                 <% unless flash[:user_profile_errors].nil? %>
