--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -10,7 +10,7 @@
       <%= render 'layouts/header' %>
       <div id="dashboard_layout">
             <div id="page_content">
-                <div class="container">
+                <div class="container" style="top: 10px">
                     <div id="dashboard_panel">
                         <div class="covered_avatar">
                             <div class="avatar">
