--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -26,8 +26,18 @@
                         <div id="dashboard_nav">
                             <%= link_to 'اطلاعات حساب کاربری', dashboard_edit_profile_url, :class => 'link' %>
                             <%= link_to 'تغییر رمز عبور', dashboard_change_password_url, :class => 'link' %>
+                            <% if @user.is_owner? || @user.is_admin? %>
+                                <%= link_to 'مقاله جدید', dashboard_manage_users_url, :class => 'link' %>
+                                <%= link_to 'مقاله های شما', dashboard_manage_users_url, :class => 'link' %>
+                                <%= link_to 'آمار کلی', dashboard_manage_users_url, :class => 'link' %>
+                                <%= link_to 'آمار پر بازدید ترین مقاله ها', dashboard_manage_users_url, :class => 'link' %>
+                                <%= link_to 'آمار پر لایک ترین مقاله ها', dashboard_manage_users_url, :class => 'link' %>
+                                
+                            <% end %>
                             <% if @user.is_owner? %>
                                 <%= link_to 'مدیریت کاربران', dashboard_manage_users_url, :class => 'link' %>
+                                <%= link_to 'مدیریت قوانین وبسایت', dashboard_manage_users_url, :class => 'link' %>
+                                <%= link_to 'تنظیمات وبسایت', dashboard_manage_users_url, :class => 'link' %>
                             <% end %>
                         </div>
                     </div>
