--- a/app/views/dashboard/new_article.html.erb
+++ b/app/views/dashboard/new_article.html.erb
@@ -12,9 +12,9 @@
                 <%= f.text_area :cover_text %>
             </div>
 
-            <div class="input">
+            <div class="mde">
                 <%= f.label :content, 'محتوا' %>
-                <%= f.text_area :content, :id => 'simplemde_textarea' %>
+                <%= f.text_area :content, :class => 'mde_textarea' %>
             </div>
 
             <div class="input">
