markdown editor & code highlighter[prism] added

--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -30,6 +30,10 @@ body {
         }
     }
 }
+.turbolinks-progress-bar {
+    height: 3px;
+    background-color: #003cff;
+}
 #header {
     position: fixed;
     z-index: 70;
