--- a/app/views/layouts/_tags.html.erb
+++ b/app/views/layouts/_tags.html.erb
@@ -1,5 +1,7 @@
 <%= csrf_meta_tags %>
 <%= csp_meta_tag %>
 <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-<%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-<script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
+<%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', 'data-turbolinks-eval': 'false', :defer => 'defer' %>
+<%= javascript_pack_tag 'scripts', 'data-turbolinks-track': 'load', 'data-turbolinks-eval': 'false', :defer => 'defer' %>
+<script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
