--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,26 +2,26 @@
     <div id="view_article">
         <div class='article_box'>
             <div style="display: block; width: 100%; margin-bottom: 10px;">
-                <h1 class='title' dir="rtl" style="margin-bottom: 10px;">آموزش نصب فلاسک در پایتون</h3>
+                <h1 class='title' dir="rtl" style="margin-bottom: 10px;"><%= @article.header %></h3>
                 <span class="article_submit_time" dir="ltr">
                     <span class='icon'>
                         <ion-icon name='calendar-outline'></ion-icon>
                     </span>
-                    1400/4/23 
+                    <%= @article.published_time %>
                 </span>
             </div>
             <div class='image cover'>
-                <img src='https://picsum.photos/2000/1200' class='' onload='imagePreloader(this)'>
+                <%= image_tag @article.image, :onload => 'imagePreloader(this)' %>
             </div>
             <div class="content" style="margin: 10px 0;" dir="rtl">
-                این پست مقاله است والسلام.
+                <%= @article.content %>
             </div>
             <div class="author_row">
                 <div class="icon">
                     <ion-icon name="person-outline"></ion-icon>
                 </div>
                 <div class="value">
-                    طاها دوستی فام
+                    <%= @article.user.full_name %>
                 </div>
             </div>
         </div>
