--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,7 +13,7 @@
             <div class='image cover'>
                 <%= image_tag @article.image, :onload => 'imagePreloader(this)' %>
             </div>
-            <div class="content" style="margin: 10px 0;" dir="rtl">
+            <div class="content md_to_html" style="margin: 10px 0;" dir="rtl">
                 <%= @article.content %>
             </div>
             <div class="author_row">
