--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -28,7 +28,7 @@
                             <%= link_to 'تغییر رمز عبور', dashboard_change_password_url, :class => 'link' %>
                             <% if @user.is_owner? || @user.is_admin? %>
                                 <%= link_to 'مقاله جدید', dashboard_new_article_url, :class => 'link' %>
-                                <%= link_to 'مقاله های شما', dashboard_manage_users_url, :class => 'link' %>
+                                <%= link_to 'مقاله های من', dashboard_my_articles_url, :class => 'link' %>
                                 <%= link_to 'آمار کلی', dashboard_manage_users_url, :class => 'link' %>
                                 <%= link_to 'آمار پر بازدید ترین مقاله ها', dashboard_manage_users_url, :class => 'link' %>
                                 <%= link_to 'آمار پر لایک ترین مقاله ها', dashboard_manage_users_url, :class => 'link' %>
