--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -1,43 +1,43 @@
+.article_box{
+	.title{
+		color: #000;
+	}
+	.cover{
+		width: 100%;
+		height: 230px;
+	}
+	width: 100%;
+	.desc{
+		color: #777;
+	}
+	.footer{
+		margin-top: 4px;
+		display: block;
+		.author, .comments_count, .article_submit_time{
+			position: relative;
+			color: #003cff;
+			padding-right: 22px;
+			.icon{
+				position: absolute;
+				font-size: 19px;
+				right: 0;
+			}
+		}
+		.article_submit_time{
+			font-family: sans-serif;
+		}
+		.comments_count{
+			padding-right: 20px;
+			margin-right: 10px;
+		}
+	}
+}	
 #articles_list{
 	width: 100%;
 	display: grid;
 	grid-template-columns: calc(100% / 3) calc(100% / 3 - 15px) calc(100% / 3 - 15px);
 	grid-gap: 15px;
 	direction: rtl;
-	.article_box{
-		.title{
-			color: #000;
-		}
-		.cover{
-			width: 100%;
-			height: 230px;
-		}
-		width: 100%;
-		.desc{
-			color: #777;
-		}
-		.footer{
-			margin-top: 4px;
-			display: block;
-			.author, .comments_count, .article_submit_time{
-				position: relative;
-				color: #003cff;
-				padding-right: 22px;
-				.icon{
-					position: absolute;
-					font-size: 19px;
-					right: 0;
-				}
-			}
-			.article_submit_time{
-				font-family: sans-serif;
-			}
-			.comments_count{
-				padding-right: 20px;
-				margin-right: 10px;
-			}
-		}
-	}	
 }
 @media screen and (max-width: 1100px) {
 	#articles_list{
@@ -50,6 +50,21 @@
 		grid-gap: 15px;
 	}
 }
+
+#articles_mini_list{
+	width: 100%;
+	display: grid;
+	grid-template-columns: calc(100% / 2) calc(100% / 2 - 15px);
+	grid-gap: 15px;
+	direction: rtl;
+}
+@media screen and (max-width: 1100px) {
+	#articles_mini_list{
+		grid-template-columns: calc(100%);
+		grid-gap: 0;
+	}
+}
+
 #view_article{
 	text-align: right;
 	.cover{
