--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -4,7 +4,7 @@
 	}
 	.cover{
 		width: 100%;
-		height: 230px;
+		height: 250px;
 		&.big_cover{
 			height: 280px;
 		}
@@ -71,7 +71,7 @@
 #view_article{
 	text-align: right;
 	.cover{
-		height: 500px;
+		height: 600px;
 	}
 	.article_submit_time{
 		font-family: sans-serif;
@@ -104,6 +104,21 @@
 		.value{
 			padding-right: 19px;
 			display: inline-block;	
+		}
+	}
+	.content{
+		ul{
+			padding: 0 18px;
+		}
+		code{
+			width: 100%;
+			background: #252b33;
+			color: #fff;
+			padding: 10px;
+			display: block;
+			text-align: left;
+			direction: ltr;
+			border-radius: 2px;
 		}
 	}
 }
