--- a/app/views/dashboard/my_articles.html.erb
+++ b/app/views/dashboard/my_articles.html.erb
@@ -1,5 +1,5 @@
 <div class="content">
-		<h2 class="container_title bb">مقاله های شما</h2>
+		<h2 class="container_title bb">مقاله های من (<%= @my_articles.length %>)</h2>
 		<% if @my_articles.length > 0 %>
 		<div id="articles_mini_list">
 		    <% @my_articles.each do |art| %>
