--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -19,6 +19,9 @@
 	position: relative;
 	display: block;
 	width: 600px;
+	&.form-large{
+		width: 950px;
+	}
 	left: 50%;
 	transform: translate(-50%);
 	top: 90px;
