--- a/app/views/dashboard/my_articles.html.erb
+++ b/app/views/dashboard/my_articles.html.erb
@@ -6,18 +6,19 @@
 		    	<% if art.image.present? %>
 					<a href="/articles/show/<%= art.slug %>">
 						<div class='article_box'>
+							<span class="hashtag">
+								<% if art.draft? %>
+									(پیشنویس)
+								<% elsif art.published? %>
+									(منتشر شده)
+								<% elsif !art.published? %>
+									(منتشر نشده)
+								<% end %>
+							</span>
 							<div class='image cover big_cover'>
 								<%= image_tag art.image, :onload => 'imagePreloader(this)' %>
 							</div>
-							<h3 class='title'>
-								<%= art.header %>
-								<% if art.draft? %>
-									(پیشنویس)
-								<% end %>
-								<% unless art.published? %>
-									(منتشر نشده)
-								<% end %>
-							</h3>
+							<h3 class='title'><%= art.header %></h3>
 							<p class='desc'><%= art.cover_text %></p>
 							<div class='footer' style='display: flex; justify-content: space-between' dir='ltr'>
 								<div>
