--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -1,4 +1,5 @@
 .article_box{
+	position: relative;
 	.title{
 		color: #000;
 	}
@@ -33,6 +34,16 @@
 			padding-right: 20px;
 			margin-right: 10px;
 		}
+	}
+	.hashtag{
+		position: absolute;
+		left: 0;
+		color: #fff;
+		background-color: #003cff;
+		font-size: 13px;
+		padding: 4px 10px;
+		border-bottom-right-radius: 7px;
+		border-top-left-radius: 7px;
 	}
 }	
 #articles_list{
